--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,17 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.10.jar=libs/commons-codec-1.10.jar
 file.reference.gson-2.2.2.jar=libs/gson-2.2.2.jar
+file.reference.jcommon-1.0.23.jar=libs/jcommon-1.0.23.jar
 file.reference.jettison-1.3.7.jar=libs/jettison-1.3.7.jar
+file.reference.jfreechart-1.0.19.jar=libs/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.gson-2.2.2.jar}:\
-    ${file.reference.jettison-1.3.7.jar}
+    ${file.reference.jettison-1.3.7.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
