--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.10.jar=libs/commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar=libs/commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar=libs/commons-logging-1.2.jar
 file.reference.gson-2.2.2.jar=libs/gson-2.2.2.jar
 file.reference.jcommon-1.0.23.jar=libs/jcommon-1.0.23.jar
 file.reference.jettison-1.3.7.jar=libs/jettison-1.3.7.jar
 file.reference.jfreechart-1.0.19.jar=libs/jfreechart-1.0.19.jar
+file.reference.junit-4.12.jar=libs/junit-4.12.jar
+file.reference.log4j-1.2.17.jar=libs/log4j-1.2.17.jar
+file.reference.poi-3.17.jar=libs/poi-3.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +46,12 @@ javac.classpath=\
     ${file.reference.gson-2.2.2.jar}:\
     ${file.reference.jettison-1.3.7.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.poi-3.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
