--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,96 +1,72 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=SdnRestconfCommunicator
-application.vendor=pas
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/SdnRestconfCommunicator.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+#Mon Oct 02 12:05:35 EEST 2017
 excludes=
-file.reference.commons-codec-1.10.jar=libs/commons-codec-1.10.jar
-file.reference.commons-collections4-4.1.jar=libs/commons-collections4-4.1.jar
-file.reference.commons-logging-1.2.jar=libs/commons-logging-1.2.jar
-file.reference.gson-2.2.2.jar=libs/gson-2.2.2.jar
-file.reference.jcommon-1.0.23.jar=libs/jcommon-1.0.23.jar
-file.reference.jettison-1.3.7.jar=libs/jettison-1.3.7.jar
-file.reference.jfreechart-1.0.19.jar=libs/jfreechart-1.0.19.jar
-file.reference.junit-4.12.jar=libs/junit-4.12.jar
-file.reference.log4j-1.2.17.jar=libs/log4j-1.2.17.jar
-file.reference.poi-3.17.jar=libs/poi-3.17.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.commons-codec-1.10.jar}:\
-    ${file.reference.gson-2.2.2.jar}:\
-    ${file.reference.jettison-1.3.7.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.commons-collections4-4.1.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.junit-4.12.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.poi-3.17.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
 javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+file.reference.jettison-1.3.7.jar=libs/jettison-1.3.7.jar
+javac.processorpath=${javac.classpath}
 javac.target=1.8
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+file.reference.junit-4.12.jar=libs/junit-4.12.jar
+file.reference.commons-logging-1.2.jar=libs/commons-logging-1.2.jar
+test.src.dir=test
+build.dir=build
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+main.class=sdnrestconfcommunicator.Main
+dist.jar=${dist.dir}/SdnRestconfCommunicator.jar
+javac.test.processorpath=${javac.test.classpath}
+file.reference.commons-collections4-4.1.jar=libs/commons-collections4-4.1.jar
+file.reference.jfreechart-1.0.19.jar=libs/jfreechart-1.0.19.jar
+file.reference.poi-3.17.jar=libs/poi-3.17.jar
+javadoc.use=true
+dist.archive.excludes=
+file.reference.jcommon-1.0.23.jar=libs/jcommon-1.0.23.jar
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
+file.reference.commons-codec-1.10.jar=libs/commons-codec-1.10.jar
+javac.source=1.8
+application.vendor=pas
+file.reference.log4j-1.2.17.jar=libs/log4j-1.2.17.jar
+junit.selected.version=4
+debug.classpath=${run.classpath}
+run.jvmargs=
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+annotation.processing.run.all.processors=true
+application.title=SdnRestconfCommunicator
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+annotation.processing.enabled=true
+file.reference.gson-2.2.2.jar=libs/gson-2.2.2.jar
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+mkdist.disabled=false
+endorsed.classpath=
+javac.classpath=${file.reference.commons-codec-1.10.jar}\:${file.reference.gson-2.2.2.jar}\:${file.reference.jettison-1.3.7.jar}\:${file.reference.jfreechart-1.0.19.jar}\:${file.reference.jcommon-1.0.23.jar}\:${file.reference.commons-collections4-4.1.jar}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.log4j-1.2.17.jar}\:${file.reference.poi-3.17.jar}
+annotation.processing.enabled.in.editor=false
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sdnrestconfcommunicator.Main
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
